--- a/.workbench/manifest.json
+++ b/.workbench/manifest.json
@@ -2,7 +2,7 @@
     "version": "1.0.0",
     "toolchains": [
         {
-            "platforms": [6, 8, 10, 12, 13, 23, 25, 26],
+            "platforms": [12, 13, 23, 25, 26],
             "firmware": "deviceOS@source",
             "compilers": "gcc-arm@10.2.1",
             "tools": "buildtools@1.1.1",
