addresses Andrey's review comments (part1)

--- a/test/unit_tests/cellular/CMakeLists.txt
+++ b/test/unit_tests/cellular/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(
   ${DEVICE_OS_DIR}/services/inc/
   ${DEVICE_OS_DIR}/wiring/inc/
   ${DEVICE_OS_DIR}/hal/network
+  ${DEVICE_OS_DIR}/hal/src/gcc
 )
 
 # Create test executable
